Fix video block spacing + remove doubled spacing on dekstop

--- a/src/_includes/scss/style.scss
+++ b/src/_includes/scss/style.scss
@@ -254,6 +254,10 @@ p {
 	border-radius: var(--border-radius);
 }
 
+.gall__video {
+	display: block;
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                 Typesetting                                */
 /* -------------------------------------------------------------------------- */
@@ -751,6 +755,12 @@ p {
 }
 
 /* -------------------------------------------------------------------------- */
+/*                                Proj Gallery                                */
+.gallery__item:not(p) {
+	margin-block-end: var(--layout-unit);
+}
+
+/* -------------------------------------------------------------------------- */
 /*                             Proj Pagination Nav                            */
 .proj__nav-wrapper {
 	display: flex;
@@ -1121,6 +1131,10 @@ p {
 		display: grid;
 		grid-template-columns: var(--base-columns);
 		gap: var(--layout-unit);
+	}
+
+	.gallery__item:not(p) {
+		margin-block-end: 0;
 	}
 
 	/* -------------------------------------------------------------------------- */
